Semi-fix background bleed in progress bar
[skip ci]

--- a/src/components/verification-grid-tile/css/style.css
+++ b/src/components/verification-grid-tile/css/style.css
@@ -108,8 +108,14 @@
   display: flex;
   width: 100%;
   min-height: var(--oe-spacing);
-  border: var(--oe-border-width) solid var(--oe-border-color);
+
+  /*
+    We use outline to minimize background-bleed seen with borders
+    TODO: This is not a correct fix, but it gets us 99% of the way there.
+  */
+  outline: var(--oe-border-width) solid var(--oe-border-color);
   border-radius: var(--progress-meter-rounding);
+  background-clip: padding-box;
 
   /*
     Only apply spacing to the top and bottom of the progress meter because we
